Removed leveloffsets from Monitoring, Alerts, and Reporting.

--- a/doc-Monitoring_Alerts_and_Reporting/topics/Adding_a_Report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Adding_a_Report.adoc
@@ -1,4 +1,4 @@
-= Adding a Report
+=== Adding a Report
 
 Add reports if the default reports do not include what you need or you want to narrow the scope of a report.
 For example, you may want a report that shows only Windows virtual machines.
