--- a/doc-Monitoring_Alerts_and_Reporting/topics/Alert_Profiles.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Alert_Profiles.adoc
@@ -1,18 +1,11 @@
 [[_sect_alert_profiles]]
-= Alert Profiles
+== Alert Profiles
 
-:leveloffset: 2
 include::To_create_an_Alert_Profile.adoc[]
 
-
-:leveloffset: 2
 include::To_edit_an_Alert_Profile.adoc[]
 
-
-:leveloffset: 2
 include::To_delete_an_Alert_Profile.adoc[]
 
-
-:leveloffset: 2
 include::To_assign_an_Alert_Profile.adoc[]
 
