--- a/doc-Monitoring_Alerts_and_Reporting/topics/Changing_Report_Views.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Changing_Report_Views.adoc
@@ -1,4 +1,4 @@
-= Changing Report Views
+==== Changing Report Views
 
 Some reports can be viewed as charts as well as lists.
 Note that this will depend on the type of data and on how the report has been created.
