--- a/doc-Monitoring_Alerts_and_Reporting/topics/Chargeback_Rates.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Chargeback_Rates.adoc
@@ -1,4 +1,4 @@
-= Chargeback Rates
+=== Chargeback Rates
 
 {product-title} provides a default set of rates for calculating chargeback costs, but you can create your own set of computing and storage costs by navigating to menu:Cloud Intelligence[Chargeback] and clicking the *Rates* accordion. 
 
@@ -18,7 +18,7 @@ Chargeback rates can be assigned at a single rate or by tiers, where rates are a
 Additionally, chargeback can be calculated at one fixed rate, or by a combination of fixed and variable rates per tier. Fixed rates are charged once per unit of time, and the variable rate is calculated by the level of usage multiplied by the number of resources used in a unit of time.
 
 
-== Memory Used Cost
+==== Memory Used Cost
 
 Calculating the Memory Used Cost in dollars ($) for a day can be expressed in the following ways:
 
@@ -38,7 +38,7 @@ In a scenario where 9.29 GB of memory is used in a day with the chargeback rate 
 * 9514.08 MB * $1 (per MB per day) = $9514.08
 * $9514.08 / 24 = $396.42 Memory Used Cost
 
-== CPU Total Cost
+==== CPU Total Cost
 
 The CPU Total Cost is defined as the number of virtual CPUs over the selected interval (hour, day, week, month). CPU costs can be measured in units of Hz, KHz, MHz, GHz, or THz, as specified when creating a chargeback rate.
 
@@ -50,7 +50,7 @@ In a scenario where 16 CPUs are used in a day with the chargeback rate set at on
 * 16 CPUs * $1 (per CPU per day) = $16 CPU Total Cost
 ======
 
-== CPU Used Cost
+==== CPU Used Cost
 
 The CPU Used Cost is defined as the average CPU used in MHz over the selected rate interval (hour, day, week, month).
 
@@ -62,7 +62,7 @@ In a scenario where 2.5 GHz is used in a day with the chargeback rate set at $0.
 * 2500 MHz * $0.01 (per MHz per day) = $25 CPU Used Cost
 ======
 
-== Storage Allocated Cost
+==== Storage Allocated Cost
 
 The Storage Allocated Cost is defined as the Allocated Disk Storage in bytes over the selected rate interval (hour, day, week, month). Storage costs can be measured in B, KB, MB, GB, or TB.
 
@@ -74,7 +74,7 @@ In a scenario where 500 GB are used in a day with the chargeback rate set at $0.
 * 500 GB * $0.10 (per GB per day) = $50 Storage Allocated Cost
 ======
 
-== Storage Total Cost
+==== Storage Total Cost
 
 The Storage Total Cost is defined as the Used Disk Storage in bytes over the selected rate interval (hour, day, week, month).
 
@@ -86,7 +86,7 @@ In a scenario where 250 GB are used in a day with the chargeback rate set at $0.
 * 250 GB * $0.10 (per GB per day) = $25 Storage Total Cost
 ======
 
-== Storage Used Cost
+==== Storage Used Cost
 
 The Storage Used Cost is defined as the Used Disk Storage in bytes over the selected rate interval (hour, day, week, month).
 
