--- a/doc-Monitoring_Alerts_and_Reporting/topics/Copying_a_report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Copying_a_report.adoc
@@ -1,4 +1,4 @@
-= Copying a Report
+=== Copying a Report
 
 Use this feature to copy a report that is similar to one that you want to create.
 By copying a report, you only need to make minor edits instead of creating an entirely new report.
