--- a/doc-Monitoring_Alerts_and_Reporting/topics/Deleting_a_Report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Deleting_a_Report.adoc
@@ -1,4 +1,4 @@
-= Deleting a Report
+=== Deleting a Report
 
 Delete reports when you find that they are no longer useful.
 Only administrators and super administrators of {product-title} can add, copy, edit, and delete reports.
