--- a/doc-Monitoring_Alerts_and_Reporting/topics/Downloading_a_Report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Downloading_a_Report.adoc
@@ -1,4 +1,4 @@
-= Downloading a Report
+==== Downloading a Report
 
 Download reports to analyze the data using other tools or to print the report.
 
