--- a/doc-Monitoring_Alerts_and_Reporting/topics/Editing_a_Report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Editing_a_Report.adoc
@@ -1,4 +1,4 @@
-= Editing a Report
+=== Editing a Report
 
 If you find that a report is not giving you the data that you need, you can edit it after it has been created.
 Note that only reports that you have created can be modified.
