--- a/doc-Monitoring_Alerts_and_Reporting/topics/Expression_Alerts.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Expression_Alerts.adoc
@@ -1,5 +1,5 @@
 [[_expression_alerts]]
-= Creating an Expression Alert
+=== Creating an Expression Alert
 
 Expression alerts enables you to create a notification based on any possible criteria for clusters, datastores, hosts, and virtual machines.
 The following procedure creates an alert for when a host's datastore has less than 5% free space.
