--- a/doc-Monitoring_Alerts_and_Reporting/topics/Importing_and_Exporting_Policies_Policy_Profiles_and_Alerts.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Importing_and_Exporting_Policies_Policy_Profiles_and_Alerts.adoc
@@ -1,4 +1,4 @@
-= Importing and Exporting Policies, Policy Profiles, and Alerts
+=== Importing and Exporting Policies, Policy Profiles, and Alerts
 
 If you have multiple VMDBs, you can export policies, policy profiles, or alerts from one to another.
 You can export and import for use with other {product-title} infrastructures.
