--- a/doc-Monitoring_Alerts_and_Reporting/topics/RSS.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/RSS.adoc
@@ -1,5 +1,5 @@
 [[_sect_rss]]
-= RSS
+== RSS
 
 Use RSS to view RSS feeds based on administrative roles.
 You can subscribe to the RSS feeds and have them delivered to an RSS reader.
