--- a/doc-Monitoring_Alerts_and_Reporting/topics/Report_Download_Buttons.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Report_Download_Buttons.adoc
@@ -1,4 +1,4 @@
-= Report Download Buttons
+==== Report Download Buttons
 
 When you click on one of the supplied reports, you are presented with a group of buttons to download the report in one of three formats or to view the report in a full screen. 
 
