--- a/doc-Monitoring_Alerts_and_Reporting/topics/Reports.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Reports.adoc
@@ -1,5 +1,5 @@
 [[_sect_reports]]
-= Reports
+== Reports
 
 Click the *Reports* accordion under menu:Cloud Intelligence[Reports] to see a list of reports available.
 These reports have been constructed to help you view the most commonly requested and significant data.
@@ -23,38 +23,21 @@ Each category has its own set of subfolders.
 
 For a complete list of reportable fields in {product-title}, see xref:_appe_reportable_fields[].
 
-:leveloffset: 2
 include::running_reports.adoc[]
 
-
-:leveloffset: 2
 include::viewing_reports.adoc[]
 
-
-:leveloffset: 2
 include::Adding_a_Report.adoc[]
 
-
-:leveloffset: 2
 include::Copying_a_report.adoc[]
 
-
-:leveloffset: 2
 include::Editing_a_Report.adoc[]
 
-
-:leveloffset: 2
 include::Deleting_a_Report.adoc[]
 
-
-:leveloffset: 2
 include::To_import_a_report.adoc[]
 
-
-:leveloffset: 2
 include::To_export_a_report.adoc[]
 
-
-:leveloffset: 2
 include::report_menus.adoc[]
 
