--- a/doc-Monitoring_Alerts_and_Reporting/topics/Showing_a_Report_in_Full_Screen.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Showing_a_Report_in_Full_Screen.adoc
@@ -1,4 +1,4 @@
-= Showing a Report in Full Screen
+==== Showing a Report in Full Screen
 
 View the report in full screen to zoom into the report screen.
 From full screen, you can also print the chart that accompanies a report. 
