--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_access_and_use_a_Timeline.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_access_and_use_a_Timeline.adoc
@@ -1,5 +1,5 @@
 [[_to_access_and_use_a_timeline]]
-= Accessing and Using a Timeline
+=== Accessing and Using a Timeline
 
 You can use timelines to view the history record for virtual machines.
 
