--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_add_a_widget.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_add_a_widget.adoc
@@ -1,5 +1,5 @@
 [[_to_add_a_widget]]
-= Adding a Widget
+=== Adding a Widget
 
 You can add widgets to the dashboard to accommodate the information you want to see upon login.
 
