--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_assign_an_Alert_Profile.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_assign_an_Alert_Profile.adoc
@@ -1,5 +1,5 @@
 [[_to_assign_an_alert_profile]]
-= Assigning an Alert Profile
+=== Assigning an Alert Profile
 
 After an alert profile is created and verified, you can assign it directly to a resource.
 
