--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_assign_chargeback_rates.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_assign_chargeback_rates.adoc
@@ -1,5 +1,5 @@
 [[_to_assign_chargeback_rates]]
-= Assigning Chargeback Rates
+=== Assigning Chargeback Rates
 
 {product-title} allows you to assign chargeback rates by choosing from *Compute* and *Storage*.
 
