--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_assign_the_Notifier_Role.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_assign_the_Notifier_Role.adoc
@@ -1,5 +1,5 @@
 [[_to_assign_the_notifier_role]]
-= Assigning the Notifier Role
+=== Assigning the Notifier Role
 
 . Navigate to menu:Settings[Configuration].
 . Click the *Settings* accordion, and select the {product-title} server.
