--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_copy_an_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_copy_an_Alert.adoc
@@ -1,5 +1,5 @@
 [[_to_copy_an_alert]]
-= Copying an Alert
+=== Copying an Alert
 
 You can copy an existing alert to create a new alert that is similar to the existing one, then change the values associated with it.
 
