--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Chart_widget.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Chart_widget.adoc
@@ -1,5 +1,5 @@
 [[_to_create_a_chart_widget]]
-= Creating a Chart Widget
+=== Creating a Chart Widget
 
 . Navigate to menu:Cloud Intelligence[Reports].
 . Click the *Dashboard Widgets* accordion and click the *Charts* folder.
