--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Hardware_Reconfigure_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Hardware_Reconfigure_Alert.adoc
@@ -1,5 +1,5 @@
 [[_to_create_a_hardware_reconfigure_alert]]
-= Creating a Hardware Reconfigured Alert
+=== Creating a Hardware Reconfigured Alert
 
 Use a hardware reconfigure alert to detect changes to the amount of memory or the number of CPUs on a virtual machine.
 
