--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Hostd_Log_Threshold_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Hostd_Log_Threshold_Alert.adoc
@@ -1,5 +1,5 @@
 [[_to_create_a_hostd_log_threshold_alert]]
-= Creating a hostd Log Threshold Alert
+=== Creating a hostd Log Threshold Alert
 
 Use the *hostd Log Threshold* to send a notification when certain items are found in the event logs for a host.
 A default analysis profile with event log items is required for this feature.
