--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Menu_widget.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Menu_widget.adoc
@@ -1,5 +1,5 @@
 [[_to_create_a_menu_widget]]
-= Creating a Menu Widget
+=== Creating a Menu Widget
 
 . Navigate to menu:Cloud Intelligence[Reports].
 . Click the *Dashboard Widgets* accordion and click the *Menus* folder.
