--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Normal_Operating_Range_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Normal_Operating_Range_Alert.adoc
@@ -1,5 +1,5 @@
 [[_to_create_a_normal_operating_range_alert]]
-= Creating a Normal Operating Range Alert
+=== Creating a Normal Operating Range Alert
 
 Normal operating range alerts enables you to be notified when the normal operating range is exceeded, or falls below for a period of time from 1 minute to 2 hours.
 Capacity and utilization must be enabled for normal operating ranges to be calculated.
