--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Real_Time_Performance_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Real_Time_Performance_Alert.adoc
@@ -1,5 +1,5 @@
 [[_to_create_a_real_time_performance_alert]]
-= Creating a Real Time Performance Alert
+=== Creating a Real Time Performance Alert
 
 Real Time Performance alerts enables you to be notified immediately when a performance threshold has been met for a virtual machine, host, or cluster.
 Capacity and Utilization must be enabled for performance thresholds to be detected.
