--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Report_widget.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Report_widget.adoc
@@ -1,5 +1,5 @@
 [[_to_create_a_report_widget]]
-= Creating a Report Widget
+=== Creating a Report Widget
 
 . Navigate to menu:Cloud Intelligence[Reports].
 . Click on the *Dashboard Widgets* accordion, then choose the *Reports* folder.
