--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_VMware_Alarm_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_VMware_Alarm_Alert.adoc
@@ -1,5 +1,5 @@
 [[_to_create_a_vmware_alarm_alert]]
-= Creating a VMware Alarm Alert
+=== Creating a VMware Alarm Alert
 
 {product-title} can use VMware alarms as a trigger for an alert.
 This type of alert can be created for a cluster, host, or virtual machine.
