--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_Alert.adoc
@@ -1,5 +1,5 @@
 [[_to_create_an_alert]]
-= Creating an Alert
+=== Creating an Alert
 
 In this section, the basics of creating an Alert are described.
 Detailed instructions for the specific types of Alerts are given in the sections following.
