--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_Alert_Profile.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_Alert_Profile.adoc
@@ -1,5 +1,5 @@
 [[_to_create_an_alert_profile]]
-= Creating Alert Profiles
+=== Creating Alert Profiles
 
 Alert profiles enable you to create groups of standard alerts.
 An alert profile can have as many alerts assigned as you need, and can be assigned to clusters, datastores, hosts, and virtual machines.
