--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_Hourly_Performance_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_Hourly_Performance_Alert.adoc
@@ -1,5 +1,5 @@
 [[_to_create_an_hourly_performance_alert]]
-= Creating an Hourly Performance Alert
+=== Creating an Hourly Performance Alert
 
 Hourly performance alerts enable you to be notified immediately when an hourly performance threshold has been met for a cluster.
 Capacity and Utilization must be enabled for performance thresholds to be detected.
