--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_Operational_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_Operational_Alert.adoc
@@ -1,5 +1,5 @@
 [[_to_create_an_operational_alert]]
-= Create an Operational Alert
+=== Create an Operational Alert
 
 . Navigate to menu:Control[Explorer].
 . Click on the *Alerts* accordion, then click  image:1847.png[] (*Configuration*),  image:1862.png[] (*Add a new Alert*).
