--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_RSS_Feed_widget.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_RSS_Feed_widget.adoc
@@ -1,5 +1,5 @@
 [[_to_create_an_rss_feed_widget]]
-= Creating an RSS Feed Widget
+=== Creating an RSS Feed Widget
 
 . Navigate to menu:Cloud Intelligence[Reports].
 . Click the *Dashboard Widgets* accordion, and click the *RSS Feeds* folder.
