--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_chargeback_rates.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_chargeback_rates.adoc
@@ -1,5 +1,5 @@
 [[_to_create_chargeback_rates]]
-= Creating Chargeback Rates
+=== Creating Chargeback Rates
 
 {product-title} allows you to create your own set of computing and storage costs to use for billing.
 
