--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_delete_a_widget.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_delete_a_widget.adoc
@@ -1,5 +1,5 @@
 [[_to_delete_a_widget]]
-= Deleting a Widget
+=== Deleting a Widget
 
 NOTE: Default widgets cannot be deleted, but they can be copied.
 
