--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_delete_an_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_delete_an_Alert.adoc
@@ -1,5 +1,5 @@
 [[_to_delete_an_alert]]
-= Deleting an Alert
+=== Deleting an Alert
 
 When an alert is no longer needed, you can remove it from your VMDB.
 
