--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_delete_an_Alert_Profile.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_delete_an_Alert_Profile.adoc
@@ -1,5 +1,5 @@
 [[_to_delete_an_alert_profile]]
-= Deleting an Alert Profile
+=== Deleting an Alert Profile
 
 Remove alert profiles that you no longer need.
 This does not remove the alerts associated with the alert profile.
