--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_download_a_Timelines_data.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_download_a_Timelines_data.adoc
@@ -1,5 +1,5 @@
 [[_to_download_a_timelines_data]]
-= Downloading a Timeline's Data
+=== Downloading a Timeline's Data
 
 You can download timeline data for further analysis or printing.
 
