--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_edit_an_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_edit_an_Alert.adoc
@@ -1,5 +1,5 @@
 [[_to_edit_an_alert]]
-= Editing an Alert
+=== Editing an Alert
 
 After creating an alert, you can edit the threshold, expression, or the notification type.
 
