--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_edit_an_Alert_Profile.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_edit_an_Alert_Profile.adoc
@@ -1,5 +1,5 @@
 [[_to_edit_an_alert_profile]]
-= Editing an Alert Profile
+=== Editing an Alert Profile
 
 You can edit an alert profile as your enterprise's needs change.
 
