--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_evaluate_an_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_evaluate_an_Alert.adoc
@@ -1,5 +1,5 @@
 [[_to_evaluate_an_alert]]
-= Evaluating an Alert
+=== Evaluating an Alert
 
 . Navigate to menu:Control[Explorer].
 . Click the *Actions* accordion, then click  image:1847.png[] (*Configuration*),  image:1862.png[] (*Add a new Action*).
