--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_generate_widget_content_immediately.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_generate_widget_content_immediately.adoc
@@ -1,5 +1,5 @@
 [[_to_generate_widget_content_immediately]]
-= Generating Widget Content Immediately
+=== Generating Widget Content Immediately
 
 . Navigate to menu:Cloud Intelligence[Reports].
 . Click the *Dashboard Widgets* accordion and select the widget you want to generate.
