--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_import_a_report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_import_a_report.adoc
@@ -1,5 +1,5 @@
 [[_to_import_a_report]]
-= Importing a Report
+=== Importing a Report
 
 Reports are stored in the VMDB; however, you can share customized reports among VMDBs.
 To do this use the export and import feature of reports.
