--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_modify_a_report_schedule.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_modify_a_report_schedule.adoc
@@ -1,5 +1,5 @@
 [[_to_modify_a_report_schedule]]
-= Modifying a Report Schedule
+==== Modifying a Report Schedule
 
 . Navigate to menu:Cloud Intelligence[Reports]
 . Click the *Schedules* accordion and select the schedule you want to edit.
