--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_schedule_a_Report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_schedule_a_Report.adoc
@@ -1,5 +1,5 @@
 [[_to_schedule_a_report]]
-= Scheduling a Report
+=== Scheduling a Report
 
 You can view historical data by creating reports on a scheduled basis.
 In addition, scheduled reports can be emailed directly to users.
