--- a/doc-Monitoring_Alerts_and_Reporting/topics/Usage.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Usage.adoc
@@ -1,5 +1,5 @@
 [[_sect_usage]]
-= Usage
+== Usage
 
 Usage provides a targeted view of CPU, RAM, disk space, disk I/O, and network I/O for tagged virtual machines.
 This allows you to find which virtual machines are using or overusing resources.
@@ -13,7 +13,6 @@ ifdef::miq[See "Tagging Virtual Machines and Templates" in *Managing Infrastruct
 ifdef::cfme[For more information on configuring capacity and utilization charts, see link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/deployment-planning-guide/#Capacity_Planning[Capacity Planning] in the *Deployment Planning Guide*.]
 ifdef::miq[For more information on configuring capacity and utilization charts, see "Capacity Planning" in the *Deployment Planning Guide*.]
 
-:leveloffset: 2
 include::To_access_Usage_data.adoc[]
 
 
