--- a/doc-Monitoring_Alerts_and_Reporting/topics/appe-Regular_Expressions.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/appe-Regular_Expressions.adoc
@@ -2,7 +2,7 @@
 
 [appendix]
 [[_appe_regular_expressions]]
-= Regular Expressions
+== Regular Expressions
 
 In {product-title}, regular expressions can be used to search the contents of a file for a specific string for use in a condition.
 Below are listed the items most commonly used with {product-title} to search strings.
