--- a/doc-Monitoring_Alerts_and_Reporting/topics/viewing_reports.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/viewing_reports.adoc
@@ -1,6 +1,6 @@
 
 [[_sect_viewing_reports]]
-= Viewing Reports
+=== Viewing Reports
 
 Once you have created a schedule for a report, you can view it at any time after the first scheduled time has occurred.
 
@@ -8,17 +8,10 @@ Once you have created a schedule for a report, you can view it at any time after
 . Click the *Saved Reports* accordion or the *Reports* accordion.
 . Click on the instance of the report you want to view.
 
-:leveloffset: 3
 include::Changing_Report_Views.adoc[]
 
-
-:leveloffset: 3
 include::Report_Download_Buttons.adoc[]
 
-
-:leveloffset: 3
 include::Downloading_a_Report.adoc[]
 
-
-:leveloffset: 3
 include::Showing_a_Report_in_Full_Screen.adoc[]
