--- a/doc-Monitoring_Alerts_and_Reporting/topics/Alerts.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Alerts.adoc
@@ -1,62 +1,33 @@
 [[_sect_alerts]]
-= Alerts
+== Alerts
 
-:leveloffset: 2
 include::To_assign_the_Notifier_Role.adoc[]
 
-
-:leveloffset: 2
 include::To_create_an_Alert.adoc[]
 
-
-:leveloffset: 2
 include::To_create_a_Hardware_Reconfigure_Alert.adoc[]
 
-
-:leveloffset: 2
 include::To_create_a_Normal_Operating_Range_Alert.adoc[]
 
-
-:leveloffset: 2
 include::To_create_a_Real_Time_Performance_Alert.adoc[]
 
-
-:leveloffset: 2
 include::To_create_an_Hourly_Performance_Alert.adoc[]
 
-
-:leveloffset: 2
 include::To_create_a_Hostd_Log_Threshold_Alert.adoc[]
 
-
-:leveloffset: 2
 include::To_create_a_VMware_Alarm_Alert.adoc[]
 
-
-:leveloffset: 2
 include::Expression_Alerts.adoc[]
 
-
-:leveloffset: 2
 include::To_create_an_Operational_Alert.adoc[]
 
-
-:leveloffset: 2
 include::Operational_Alerts.adoc[]
 
-
-:leveloffset: 2
 include::To_edit_an_Alert.adoc[]
 
-
-:leveloffset: 2
 include::To_copy_an_Alert.adoc[]
 
-
-:leveloffset: 2
 include::To_delete_an_Alert.adoc[]
 
-
-:leveloffset: 2
 include::To_evaluate_an_Alert.adoc[]
 
