--- a/doc-Monitoring_Alerts_and_Reporting/topics/Chargeback.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Chargeback.adoc
@@ -1,5 +1,5 @@
 [[_sect_chargeback]]
-= Chargeback
+== Chargeback
 
 The chargeback feature allows you to calculate monetary virtual machine charges based on owner or company tag.
 To use this feature you must be collecting capacity and utilization data.
@@ -7,15 +7,11 @@ To use this feature you must be collecting capacity and utilization data.
 ifdef::cfme[For information on server control settings and capacity & utilization collection settings, see link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/general-configuration/general-configuration[General Configuration].]
 ifdef::miq[For information on server control setting and capacity & utilization collection settings, see General Configuration.]
 
-:leveloffset: 2
 include::Chargeback_Rates.adoc[]
 
-:leveloffset: 2
 include::To_create_chargeback_rates.adoc[]
 
-:leveloffset: 2
 include::To_assign_chargeback_rates.adoc[]
 
-:leveloffset: 2
 include::To_create_a_chargeback_report.adoc[]
 
