--- a/doc-Monitoring_Alerts_and_Reporting/topics/Creating_Dashboard_Widgets.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Creating_Dashboard_Widgets.adoc
@@ -1,43 +1,24 @@
 
 [[_sect_creating_dashboard_widgets]]
-= Creating Dashboard Widgets
+== Creating Dashboard Widgets
 
-:leveloffset: 2
 include::To_create_a_Report_widget.adoc[]
 
-:leveloffset: 2
 include::To_create_a_Chart_widget.adoc[]
 
-
-:leveloffset: 2
 include::To_create_an_RSS_Feed_widget.adoc[]
 
-
-:leveloffset: 2
 include::To_create_a_Menu_widget.adoc[]
 
-
-:leveloffset: 2
 include::To_edit_a_widget.adoc[]
 
-
-:leveloffset: 2
 include::To_copy_a_widget.adoc[]
 
-
-:leveloffset: 2
 include::To_delete_a_widget.adoc[]
 
-
-:leveloffset: 2
 include::Importing_a_Widget.adoc[]
 
-
-:leveloffset: 2
 include::Exporting_a_Widget.adoc[]
 
-
-:leveloffset: 2
 include::To_generate_widget_content_immediately.adoc[]
-
 
