--- a/doc-Monitoring_Alerts_and_Reporting/topics/Operational_Alerts.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Operational_Alerts.adoc
@@ -1,5 +1,5 @@
 [[_operational_alerts]]
-= Operational Alert Types
+=== Operational Alert Types
 
 .Operational Alerts
 [cols="1,1,1", frame="all", options="header"]
