--- a/doc-Monitoring_Alerts_and_Reporting/topics/Timelines.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Timelines.adoc
@@ -1,9 +1,7 @@
 [[_sect_timelines]]
-= Timelines
+== Timelines
 
-:leveloffset: 2
 include::To_access_and_use_a_Timeline.adoc[]
 
-:leveloffset: 2
 include::To_download_a_Timelines_data.adoc[]
 
