--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_access_Usage_data.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_access_Usage_data.adoc
@@ -1,5 +1,5 @@
 [[_to_access_usage_data]]
-= Accessing Usage Data
+=== Accessing Usage Data
 
 . Navigate to menu:Cloud Intelligence[Usage].
 . In the *Options* area, select a *Date*.
