--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_copy_a_widget.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_copy_a_widget.adoc
@@ -1,5 +1,5 @@
 [[_to_copy_a_widget]]
-= Copying a Widget
+=== Copying a Widget
 
 . Navigate to menu:Cloud Intelligence[Reports].
 . Click the *Dashboard Widget* accordion, and select the widget you want to copy.
