--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_chargeback_report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_chargeback_report.adoc
@@ -1,5 +1,5 @@
 [[_to_create_a_chargeback_report]]
-= Creating a Chargeback Report
+=== Creating a Chargeback Report
 
 {product-title} allows you to create chargeback reports to monitor costs you charged.
 
