--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_download_a_report_widget_as_a_file.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_download_a_report_widget_as_a_file.adoc
@@ -1,5 +1,5 @@
 [[_to_download_a_report_widget_as_a_file]]
-= Downloading a Report Widget as a File
+=== Downloading a Report Widget as a File
 
 
 . Navigate to menu:Cloud Intelligence[Dashboard].
