--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_export_a_Policy_Policy_Profile_or_an_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_export_a_Policy_Policy_Profile_or_an_Alert.adoc
@@ -1,5 +1,5 @@
 [[_to_export_a_policy_policy_profile_or_an_alert]]
-= Exporting a Policy, Policy Profile, or an Alert
+=== Exporting a Policy, Policy Profile, or an Alert
 
 
 . Navigate to menu:Control[Import/Export].
