--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_export_a_report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_export_a_report.adoc
@@ -1,5 +1,5 @@
 [[_to_export_a_report]]
-= Exporting a Report
+=== Exporting a Report
 
 Reports are stored in the VMDB; however, you can share customized reports among VMDBs.
 To do this use the export and import feature of reports.
