--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_generate_a_single_report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_generate_a_single_report.adoc
@@ -1,5 +1,5 @@
 [[_to_generate_a_single_report]]
-= Generating a Single Report
+==== Generating a Single Report
 
 . Navigate to menu:Cloud Intelligence[Reports]
 . Click the *Reports* accordion and select the report you want to view.
