--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_manage_Report_Menu_Accordions.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_manage_Report_Menu_Accordions.adoc
@@ -1,5 +1,5 @@
 [[_to_manage_report_menu_accordions]]
-= Managing Report Menu Accordions
+==== Managing Report Menu Accordions
 
 . Navigate to menu:Cloud Intelligence[Reports].
 . Click the *Edit Report Menus* folder.
