--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_remove_a_widget.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_remove_a_widget.adoc
@@ -1,6 +1,6 @@
 
 [[_to_remove_a_widget]]
-= Removing a Widget
+=== Removing a Widget
 
 You can remove a widget when you no longer need the widget to be displayed in the dashboard.
 
