--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_reset_to_the_default_set_of_widgets.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_reset_to_the_default_set_of_widgets.adoc
@@ -1,5 +1,5 @@
 [[_to_reset_to_the_default_set_of_widgets]]
-= Resetting to the Default Set of Widgets
+=== Resetting to the Default Set of Widgets
 
 You can reset to default set of widgets according to your needs with the following steps:
 
