--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_run_a_scheduled_report_immediately.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_run_a_scheduled_report_immediately.adoc
@@ -1,5 +1,5 @@
 [[_to_run_a_scheduled_report_immediately]]
-= Running a Scheduled Report Immediately
+==== Running a Scheduled Report Immediately
 
 . Navigate to menu:Cloud Intelligence[Reports].
 . Click the *Schedules* accordion and select the schedule you want to run.
