--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_zoom_in_to_a_chart_widget.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_zoom_in_to_a_chart_widget.adoc
@@ -1,5 +1,5 @@
 [[_to_zoom_in_to_a_chart_widget]]
-= Zooming in to a Chart Widget
+=== Zooming in to a Chart Widget
 
 . Navigate to menu:Cloud Intelligence[Dashboard].
 . From the chart widget that you want to enlarge, click  image:2261.png[] *(Zoom in)* in the upper right corner of the widget.
