--- a/doc-Monitoring_Alerts_and_Reporting/topics/chap-Cloud_Intelligence.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/chap-Cloud_Intelligence.adoc
@@ -1,6 +1,6 @@
 
 [[_sect_cloud_intelligence_dashboard]]
-= Cloud Intelligence Dashboard
+== Cloud Intelligence Dashboard
 
 Cloud Intelligence shows your virtual environment's events, reports, and configurable alerts.
 This information supports better information technology decision making and predictions for future virtual machine management.
@@ -13,23 +13,16 @@ Customize this page to include the charts, reports, and RSS feeds you specifical
 You can add, remove, move, minimize, zoom into, and maximize widgets.
 Only users with the proper access can create widgets.
 
-:leveloffset: 2
 include::To_add_a_widget.adoc[]
 
-:leveloffset: 2
 include::To_reset_to_the_default_set_of_widgets.adoc[]
 
-:leveloffset: 2
 include::To_remove_a_widget.adoc[]
 
-:leveloffset: 2
 include::To_zoom_in_to_a_chart_widget.adoc[]
 
-:leveloffset: 2
 include::To_open_a_chart_or_report_widget_in_its_own_window.adoc[]
 
-:leveloffset: 2
 include::To_minimize_or_maximize_a_widget.adoc[]
 
-:leveloffset: 2
 include::To_download_a_report_widget_as_a_file.adoc[]
