--- a/doc-Monitoring_Alerts_and_Reporting/topics/report_menus.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/report_menus.adoc
@@ -1,6 +1,6 @@
 
 [[_sect_report_menus]]
-= Report Menus
+=== Report Menus
 
 By default, all account roles have the same reports available.
 If you have the super administrator or administrator role, you can customize the accordions, the folders within them, and the locations of your reports.
@@ -21,13 +21,8 @@ The report menu is a hierarchical structure that consists of the following compo
   For example, under the *Configuration Management*, there are folders for virtual machines, hosts, and other virtual infrastructure components.
 * Reports that are stored directly in the folders.
 
-:leveloffset: 3
 include::To_manage_Report_Menu_Accordions.adoc[]
 
-
-:leveloffset: 3
 include::To_manage_report_menu_folders.adoc[]
 
-
-:leveloffset: 3
 include::To_organize_reports_in_Report_Menus.adoc[]
