Removed leveloffsets from the Methods Available for Automation guide.

--- a/doc-Methods_Available_for_Automation/topics/Adding_Disks_to_OpenStack_Instance_Provisioning.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Adding_Disks_to_OpenStack_Instance_Provisioning.adoc
@@ -1,4 +1,4 @@
-= Adding Disks to OpenStack Instance Provisioning
+===== Adding Disks to OpenStack Instance Provisioning
 
 Using the clone_options, construct the keys and values required to define new disks as well as override or set other keys if needed. 
 
