--- a/doc-Methods_Available_for_Automation/topics/Booting_OpenStack_Instances_from_Volume.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Booting_OpenStack_Instances_from_Volume.adoc
@@ -1,4 +1,4 @@
-= Booting OpenStack Instances from Volume
+===== Booting OpenStack Instances from Volume
 
 You can boot instances created in Red Hat Enterprise Linux OpenStack Platform from a specified volume from an existing selection of block volumes.
 You can enable automate to pass the required parameters to OpenStack to use volumes as booting devices on an instance. 
