--- a/doc-Methods_Available_for_Automation/topics/Customization_template.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Customization_template.adoc
@@ -1,5 +1,5 @@
 [[_customization_template]]
-= Customization Template (customization_template)
+=== Customization Template (customization_template)
 
 
 
