--- a/doc-Methods_Available_for_Automation/topics/Method_Hierarchy.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Method_Hierarchy.adoc
@@ -1,4 +1,4 @@
-= Method Hierarchy
+=== Method Hierarchy
 
 The Automate Model inline methods have a hierarchy.
 The sublevels in the hierarchy have access to the methods for itself and the levels above it.
