--- a/doc-Methods_Available_for_Automation/topics/Methods_Available_for_Automation.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Methods_Available_for_Automation.adoc
@@ -1,5 +1,5 @@
 [[_chap_methods_available_for_use_with_cloudforms_management_engine]]
-= Methods Available for Use with {product-title}
+== Methods Available for Use with {product-title}
 
 Methods can be used from within {product-title} to create custom actions and workflows for the objects managed for your {product-title} Infrastructure.
 This document describes the methods available for use in {product-title}.
@@ -23,48 +23,28 @@ For lists of Ruby gems included in different CloudForms Management Engine releas
 endif::cfme[]
 ======
 
-:leveloffset: 2
 include::About_evm.root.adoc[]
 
-
-:leveloffset: 2
 include::Method_Hierarchy.adoc[]
 
-
-:leveloffset: 2
 include::Base_Methods.adoc[]
 
-
-:leveloffset: 2
 include::Availability_Zones_availability_zone.adoc[]
 
-
-:leveloffset: 2
 include::Classifications_classification.adoc[]
 
-
-:leveloffset: 2
 include::Cloud_Networks_cloud_network.adoc[]
 
-
-:leveloffset: 2
 include::Cloud_Resource_Quotas_cloud_resource_quota.adoc[]
 
-
-:leveloffset: 2
 include::Cloud_Subnets_cloud_subnet.adoc[]
 
-
-:leveloffset: 2
 include::Cloud_Tenants_cloud_tenant.adoc[]
 
-
-:leveloffset: 2
 include::Customization_template.adoc[]
 
-:leveloffset: 2
 [[_sect_clusters_ems_cluster]]
-= Clusters (ems_cluster)
+=== Clusters (ems_cluster)
 
 [cols="1,1", frame="all", options="header"]
 |===
@@ -231,16 +211,12 @@ include::Customization_template.adoc[]
   end
 ----
 
-:leveloffset: 2
 include::Management_System_Events_ems_event.adoc[]
 
-
-:leveloffset: 2
 include::Management_System_Folders_ems_folder.adoc[]
 
-:leveloffset: 2
 [[_sect_providers_ext_management_system]]
-= Providers (ext_management_system)
+=== Providers (ext_management_system)
 
 [cols="1,1", frame="all", options="header"]
 |===
@@ -424,36 +400,22 @@ include::Management_System_Folders_ems_folder.adoc[]
   end
 ----
 
-:leveloffset: 3
 include::Cloud_Providers_ems_cloud.adoc[]
 
-
-:leveloffset: 2
 include::Firewall_Rules_firewall_rule.adoc[]
 
-
-:leveloffset: 2
 include::Flavors_flavor.adoc[]
 
-
-:leveloffset: 2
 include::Floating_IPs_floating_ip.adoc[]
 
-
-:leveloffset: 2
 include::Guest_Applications_guest_application.adoc[]
 
-
-:leveloffset: 2
 include::Guest_Device_guest_device.adoc[]
 
-
-:leveloffset: 2
 include::Hardware_hardware.adoc[]
 
-:leveloffset: 2
 [[_sect_hosts_host]]
-= Hosts (host)
+=== Hosts (host)
 
 
 [cols="1,1", frame="all", options="header"]
@@ -1039,16 +1001,12 @@ cpu_rdy = host.get_realtime_metric(:v_pct_cpu_ready_delta_summation, [15.minutes
   end
 ----
 
-:leveloffset: 3
 include::Hosts_Vmware_ESX_host_vmware_esx.adoc[]
 
-
-:leveloffset: 2
 include::LAN_lan.adoc[]
 
-:leveloffset: 2
 [[_sect_groups_miq_group]]
-= Groups (miq_group)
+=== Groups (miq_group)
 
 
 
@@ -1158,9 +1116,8 @@ include::LAN_lan.adoc[]
   end
 ----
 
-:leveloffset: 2
 [[_sect_request_miq_request]]
-= Request (miq_request)
+=== Request (miq_request)
 
 Request objects are submitted to {product-title} Server for processing.
 After the request phase, the request becomes a task object.
@@ -1547,21 +1504,14 @@ Otherwise, the item can be modified on the individual task.
 						
 |===
 
-:leveloffset: 3
 include::Automation_request.adoc[]
 
-
-:leveloffset: 3
 include::Miq_host_provision_request.adoc[]
 
-
-:leveloffset: 3
 include::Miq_provision_request.adoc[]
 
-
-:leveloffset: 2
 [[_sect_request_task_miq_request_task]]
-= Request Task (miq_request_task)
+=== Request Task (miq_request_task)
 
 
 
@@ -1829,16 +1779,12 @@ include::Miq_provision_request.adoc[]
 						
 |===
 
-:leveloffset: 3
 include::Automation_task.adoc[]
 
-
-:leveloffset: 3
 include::Miq_host_provision.adoc[]
 
-:leveloffset: 3
 [[_sect_vm_provision_task_miq_provision]]
-= VM Provision Task (miq_provision)
+==== VM Provision Task (miq_provision)
 
 [cols="1,1", frame="all", options="header"]
 |===
@@ -2476,37 +2422,22 @@ rescue => err
 end
 ----
 
-:leveloffset: 4
 include::Adding_Disks_to_OpenStack_Instance_Provisioning.adoc[]
 
-
-:leveloffset: 4
 include::Booting_OpenStack_Instances_from_Volume.adoc[]
 
-
-:leveloffset: 4
 include::VM_Provisioning_for_Clouds_Task_miq_provision_cloud.adoc[]
 
-
-:leveloffset: 3
 include::Service_template_provision_task.adoc[]
 
-
-:leveloffset: 3
 include::Service_Reconfiguration_Task_service_reconfigure_task.adoc[]
 
-
-:leveloffset: 3
 include::Vm_migrate_task.adoc[]
 
-
-:leveloffset: 2
 include::Proxies_miq_proxy.adoc[]
 
-
-:leveloffset: 2
 [[_sect_servers_miq_server]]
-= Servers (miq_server)
+=== Servers (miq_server)
 
 
 
@@ -2580,40 +2511,24 @@ These methods are available to the {product-title} Server.
   end
 ----
 
-:leveloffset: 2
 include::Network_network.adoc[]
 
-
-:leveloffset: 2
 include::Pxe_image.adoc[]
 
-
-:leveloffset: 2
 include::Pxe_server.adoc[]
 
-
-:leveloffset: 2
 include::Security_Groups_security_group.adoc[]
 
-
-:leveloffset: 2
 include::Service2.adoc[]
 
-
-:leveloffset: 2
 include::Service_Resource_service_resource.adoc[]
 
-
-:leveloffset: 2
 include::Service_Template.adoc[]
 
-
-:leveloffset: 2
 include::Snapshot_snapshot.adoc[]
 
-:leveloffset: 2
 [[_sect_datastores_storage]]
-= Datastores (storage)
+=== Datastores (storage)
 
 
 [cols="1,1", frame="all", options="header"]
@@ -2727,13 +2642,10 @@ include::Snapshot_snapshot.adoc[]
   end
 ----
 
-:leveloffset: 2
 include::Switch_switch.adoc[]
 
-
-:leveloffset: 2
 [[_sect_user_user]]
-= User (user)
+=== User (user)
 
 
 
@@ -2919,9 +2831,8 @@ These methods can be used on the currently logged on user.
   end
 ----
 
-:leveloffset: 2
 [[_sect_virtual_machines_and_templates_vm_or_template]]
-= Virtual Machines and Templates (vm_or_template)
+=== Virtual Machines and Templates (vm_or_template)
 
 The following methods can be used on a virtual machine or template object. 
 
@@ -3686,9 +3597,8 @@ The following methods can be used on a virtual machine or template object.
   end
 ----
 
-:leveloffset: 3
 [[_sect_vms_vm]]
-= VMs (vm)
+==== VMs (vm)
 
 [cols="1,1", frame="all", options="header"]
 |===
@@ -3828,17 +3738,12 @@ host = $evm.root['vm']
 cpu_rdy = vm.get_realtime_metric(:v_pct_cpu_ready_delta_summation, [15.minutes.ago.utc,5.minutes.ago.utc], :avg)
 ----
 
-:leveloffset: 4
 include::VMs_for_Clouds_vm_cloud.adoc[]
 
-
-:leveloffset: 2
 include::Windows_image.adoc[]
 
-
-:leveloffset: 2
 [[_sect_creating_categories_and_tags]]
-= Creating Categories and Tags
+=== Creating Categories and Tags
 
 These methods are invoked using $evm.execute.
 See after the table for usage examples. 
@@ -3914,11 +3819,8 @@ See after the table for usage examples.
 
 
 
-:leveloffset: 3
 include::Category_and_Tags_Methods_Example1.adoc[]
 
-
-:leveloffset: 2
 include::Quota2.adoc[]
 
 
