--- a/doc-Methods_Available_for_Automation/topics/Automation_task.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Automation_task.adoc
@@ -1,5 +1,5 @@
 [[_automation_task]]
-= Automation Task (automation_task)
+==== Automation Task (automation_task)
 
 [cols="1,1", frame="all", options="header"]
 |===
