--- a/doc-Methods_Available_for_Automation/topics/Availability_Zones_availability_zone.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Availability_Zones_availability_zone.adoc
@@ -1,4 +1,4 @@
-= Availability Zones (availability_zone)
+=== Availability Zones (availability_zone)
 
 [cols="1,1", frame="all", options="header"]
 |===
