--- a/doc-Methods_Available_for_Automation/topics/Category_and_Tags_Methods_Example1.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Category_and_Tags_Methods_Example1.adoc
@@ -1,5 +1,5 @@
 [[_category_and_tags_methods_example1]]
-= Category and Tags Methods Example
+==== Category and Tags Methods Example
 
 In this example, the VMDB is checked to see if the *Department* category exists.
 If it does, then a message is logged.
