--- a/doc-Methods_Available_for_Automation/topics/Cloud_Resource_Quotas_cloud_resource_quota.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Cloud_Resource_Quotas_cloud_resource_quota.adoc
@@ -1,4 +1,4 @@
-= Cloud Resource Quotas (cloud_resource_quota)
+=== Cloud Resource Quotas (cloud_resource_quota)
 
 [cols="1,1", frame="all", options="header"]
 |===
