--- a/doc-Methods_Available_for_Automation/topics/Miq_host_provision.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Miq_host_provision.adoc
@@ -1,5 +1,5 @@
 [[_miq_host_provision]]
-= Host Provision Task (miq_host_provision)
+==== Host Provision Task (miq_host_provision)
 
 [cols="1,1", frame="all", options="header"]
 |===
