--- a/doc-Methods_Available_for_Automation/topics/Service_Template.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Service_Template.adoc
@@ -1,5 +1,5 @@
 [[_service_template]]
-= Service Template (service_template)
+=== Service Template (service_template)
 
 [cols="1,1", frame="all", options="header"]
 |===
