--- a/doc-Methods_Available_for_Automation/topics/Service_template_provision_task.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Service_template_provision_task.adoc
@@ -1,5 +1,5 @@
 [[_service_template_provision_task]]
-= Service Template Provision Task (service_template_provision_task)
+==== Service Template Provision Task (service_template_provision_task)
 
 [cols="1,1", frame="all", options="header"]
 |===
