--- a/doc-Methods_Available_for_Automation/topics/Vm_migrate_task.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Vm_migrate_task.adoc
@@ -1,5 +1,5 @@
 [[_vm_migrate_task]]
-= VM Migrate Task (vm_migrate_task)
+==== VM Migrate Task (vm_migrate_task)
 
 [cols="1,1", frame="all", options="header"]
 |===
