--- a/doc-Methods_Available_for_Automation/topics/Windows_image.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Windows_image.adoc
@@ -1,5 +1,5 @@
 [[_windows_image]]
-= Windows Image (windows_image)
+=== Windows Image (windows_image)
 
 [cols="1,1", frame="all", options="header"]
 |===
