updated delimiters in REST guide

--- a/doc-REST_API/topics/delete_provider.adoc
+++ b/doc-REST_API/topics/delete_provider.adoc
@@ -3,7 +3,7 @@
 
 ===== Deleting a Single Provider
 
-====== Request:
+==== Request:
 
 ------
 DELETE /api/provider/105
@@ -22,7 +22,7 @@ POST /api/provider/105
 }
 ------
 
-====== Response:
+==== Response:
 
 [source,json]
 ------
@@ -36,18 +36,18 @@ POST /api/provider/105
 ------
 
 [NOTE]
-=======
+=====
 Delete actions are done asynchronously as it can take
 a while to complete. The delete task can be queried as follows:
-=======
+=====
 
-====== Request:
+==== Request:
 
 ------
 GET /api/tasks/625
 ------
 
-====== Response:
+==== Response:
 
 [source,json]
 ------
@@ -66,7 +66,7 @@ GET /api/tasks/625
 
 ===== Deleting Multiple Providers
 
-====== Request:
+==== Request:
 
 ------
 POST /api/providers
@@ -83,7 +83,7 @@ POST /api/providers
 }
 ------
 
-====== Response:
+==== Response:
 
 [source,json]
 ------
@@ -106,4 +106,5 @@ POST /api/providers
   ]
 }
 ------
+
 
