--- a/doc-REST_API/topics/delete_vm.adoc
+++ b/doc-REST_API/topics/delete_vm.adoc
@@ -3,7 +3,7 @@
 
 ===== Deleting a Single Virtual Machine
 
-====== Request:
+==== Request:
 
 ------
 DELETE /api/vms/334
@@ -14,7 +14,7 @@ On success, the virtual machine targeted for deletion asynchronously and no resp
 
 ===== Deleting Multiple Virtual Machines
 
-====== Request:
+==== Request:
 
 ------
 DELETE /api/vms
@@ -32,7 +32,7 @@ DELETE /api/vms
 }
 ------
 
-====== Response:
+==== Response:
 
 [source,json]
 ------
@@ -60,13 +60,13 @@ DELETE /api/vms
 Optionally, monitor the asynchronous virtual machine deletion by accessing the related task as follows:
 
 
-====== Request:
+==== Request:
 
 ------
 GET /api/tasks/616
 ------
 
-====== Response:
+==== Response:
 
 [source,json]
 ------
@@ -82,4 +82,5 @@ GET /api/tasks/616
   "updated_on": "2015-05-05T19:33:40Z"
 }
 ------
+
 
